--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,12 @@
 
 .container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.boards {
+  display: flex;
   gap: 100px;
   justify-content: center;
 }
