--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,10 @@
   border: 0
 }
 
+html {
+  font-size: 16px;
+}
+
 body {
   background-image:
     linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)),
@@ -20,6 +24,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 50px;
 }
 
 .boards {
@@ -84,4 +89,14 @@ body {
 
 .miss:hover {
   cursor: not-allowed;
+}
+
+.message-log {
+  min-height: 1.5rem;
+  font-size: 1.7rem;
+  padding: 10px 20px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 40px 0px 40px 40px;
+  color: white;
+  border: 3px inset rgba(255, 255, 255, 0.2);
 }
