--- a/src/styles.css
+++ b/src/styles.css
@@ -20,11 +20,14 @@ body {
 }
 
 .container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 50px;
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
 }
 
 .boards {
@@ -36,15 +39,14 @@ body {
 
 .player-board, .computer-board {
   border-radius: 5px;
-  padding: 10px;
 }
 
 .player-board {
-  box-shadow: 0 0 50px 15px #48abe0;
+  box-shadow: 0 0 80px 18px rgb(122, 222, 231);
 }
 
 .computer-board {
-  box-shadow: 0 0 50px 15px #ebecca;
+  box-shadow: 0 0 80px 18px #ebecca;
 }
 
 .row {
@@ -65,11 +67,11 @@ body {
 }
 
 .player-board .water {
-  background-color: rgb(122, 222, 231);
+  background-color: rgb(122, 222, 231, 0.5);
 }
 
 .computer-board .water {
-  background-color: rgb(229, 223, 172);
+  background-color: rgb(229, 223, 172, 0.5);
 }
 
 .computer-board .water:hover {
@@ -99,4 +101,5 @@ body {
   border-radius: 40px 0px 40px 40px;
   color: white;
   border: 3px inset rgba(255, 255, 255, 0.2);
+  box-shadow: 2px -2px 10px 1px #48abe0;
 }
