--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,9 @@ body {
 }
 
 .player-board, .computer-board {
-  border-radius: 5px;
+  border-radius: 30px 30px 30px 30px;
+  border: 3px solid white;
+  overflow: hidden;
 }
 
 .player-board {
