--- a/src/styles.css
+++ b/src/styles.css
@@ -101,7 +101,13 @@ body {
   border-radius: 40px 0px 40px 40px;
   color: white;
   border: 3px inset rgba(255, 255, 255, 0.2);
+}
+
+.highlight {
+  font-weight: bold;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   box-shadow: 2px -2px 10px 1px #48abe0;
+  border: 3px inset rgba(70, 221, 251, 0.8);
 }
 
 @keyframes messagePop {
