--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,9 @@ body {
   gap: 100px;
   justify-content: center;
   opacity: 0.6;
+  box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 20px;
 }
 
 .player-board, .computer-board {
@@ -73,7 +76,7 @@ body {
 }
 
 .ship, .hit {
-  box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.65);
 }
 
 .player-board .water {
