--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,6 @@ body {
 
 .player-board, .computer-board {
   border-radius: 30px 30px 30px 30px;
-  border: 3px solid white;
   overflow: hidden;
 }
 
@@ -66,7 +65,7 @@ body {
 .square {
   width: 50px;
   height: 50px;
-  border: 1px solid #fff;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5);
   font-size: 2.5rem;
   font-weight: bold;
 }
@@ -90,7 +89,7 @@ body {
 .computer-board .water:hover {
   filter: brightness(0.7);
   cursor: crosshair;
-  border: 1px solid black;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
 }
 
 .hit {
@@ -120,7 +119,6 @@ body {
   font-weight: bold;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   box-shadow: 2px -2px 10px 1px var(--main-color);
-  border: 3px inset var(--main-color);
 }
 
 @keyframes messagePop {
