--- a/src/styles.css
+++ b/src/styles.css
@@ -69,7 +69,7 @@ body {
 
 .player-board, .computer-board {
   border-radius: 30px 30px 30px 30px;
-  opacity: 0.6;
+  opacity: 0.7;
   overflow: hidden;
 }
 
@@ -94,7 +94,7 @@ body {
 }
 
 .ship {
-  background-color: rgb(96, 94, 94);
+  background-color: #104e4f;
 }
 
 .ship, .hit {
@@ -116,12 +116,11 @@ body {
 }
 
 .hit {
-  background-color: brown;
+  background-color: #f9401b;
 }
 
 .miss {
-  background-color: var(--opponent-color);
-  filter: brightness(0.8);
+  background-color: #a29a50;
 }
 
 .miss:hover, .hit:hover {
@@ -151,5 +150,5 @@ body {
 }
 
 .animate-log {
-  animation: messagePop 0.1s ease-out forwards;
+  animation: messagePop 0.3s ease-out forwards;
 }
